fix: Убран scrollbar-gutter из normalize.scss

--- a/app/assets/styles/common/_normalize.scss
+++ b/app/assets/styles/common/_normalize.scss
@@ -110,11 +110,7 @@ html {
     (когда, например, нужно будет "прижать" футер к низу сайта)
    */
   height: 100%;
-  /**
-    Убираем скачок интерфейса по горизонтали
-    при появлении / исчезновении скроллбара
-   */
-  scrollbar-gutter: stable;
+
   /**
     Плавный скролл
    */
